# ell

./: .gitmodules  README.md
docs/: Makefile  conf.py  index.rst  make.bat
src/: .clang-format  CMakeLists.txt  base_event_loop.cpp  base_event_loop.hpp  condition_variable.hpp  ell.hpp  ell_fwd.hpp  lock.hpp  queue.hpp  task.cpp  task.hpp
src/details/: default_event_loop.cpp  default_event_loop.hpp  ell_assert.hpp  ell_detail.hpp  ell_log.hpp  intrusive_ptr.hpp  result_holder.hpp  signal_handler.hpp  task_builder.hpp  task_impl.hpp  task_sleep.hpp  valgrind_allocator.hpp  wait_handler.hpp
src/exceptions/: cancelled.hpp
src/tests/: CMakeLists.txt  main.cpp  test_bench.cpp  test_condition_variable.cpp  test_intrusive_ptr.cpp  test_queue.cpp  test_result_holder.cpp  test_signal_handler.cpp  test_sleep.cpp  test_task.cpp  test_task_builder.cpp  test_task_cancel.cpp
